--- a/assets/home.css
+++ b/assets/home.css
@@ -1,448 +1,445 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+#registerModal {
+  margin: auto;
+  border: none;
+  border-radius: 15px;
+  width: 70%;
+  padding: 20px 10px;
+
+  .headmodal {
+    margin: auto;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    button {
+      margin: 5px 0px;
+
+      padding: 10px;
+      width: 100px;
+      background-color: rgb(207, 207, 207);
+      border: none;
+      border-radius: 5px;
+      transition: 0.5s;
+    }
   }
 
-  #registerModal {
-    margin: auto;
-    border: none;
-    border-radius: 15px;
-    width: 70%;
-    padding: 20px 10px;
+  .registerModal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 
-    .headmodal {
-      margin: auto;
-      width: 90%;
+    .contentCard {
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.151);
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
+      flex-direction: column;
+      border-radius: 10px;
+      padding: 10px;
+      background-color: rgb(242, 245, 255);
+      width: 320px;
+      height: 500px;
+      margin: 20px;
+
+      h3 {
+        width: 250px;
+      }
+
+      p {
+        width: 250px;
+      }
 
       button {
-        margin: 5px 0px;
-
-        padding: 10px;
-        width: 100px;
-        background-color: rgb(207, 207, 207);
-        border: none;
-        border-radius: 5px;
-        transition: 0.5s;
-      }
-    }
-
-    .registerModal {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      .contentCard {
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.151);
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 10px;
-        padding: 10px;
-        background-color: rgb(242, 245, 255);
-        width: 320px;
-        height: 500px;
-        margin: 20px;
-
-        h3 {
-          width: 250px;
-        }
-
-        p {
-          width: 250px;
-        }
-
-        button {
-          margin: 5px 10px;
-          padding: 20px;
-          width: 200px;
-          background-color: navy;
-          border: none;
-          color: white;
-          border-radius: 5px;
-          transition: 0.5s;
-
-          &:hover {
-            cursor: pointer;
-            scale: 1.01;
-          }
-
-          a {
-            text-decoration: none;
-            color: white;
-          }
-        }
-      }
-    }
-  }
-
-  #diploma, #shortCate, #cbtModal, #shorterModal, #cbtprogramModal {
-    border: none;
-    border-radius: 10px;
-    width: 900px;
-    padding: 20px;
-    .tblheader{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      button{
-        padding: 5px;
-        width: 100px;
-      }
-
-    }
-
-    .stcards {
-      margin: 20px;
-      align-items: center;
-      justify-content: center;
-      display: grid;
-      gap: 10px;
-      grid-template-columns: 400px 400px;
-      h2 {
-        color: white;
-        box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.111);
+        margin: 5px 10px;
         padding: 20px;
-        border-radius: 10px;
-        background-color: rgb(32, 0, 51);
-        &:hover {
-          cursor: pointer;
-          background-color: rgb(63, 1, 99);
-        }
-      }
-    }
-    .courseCard {
-      margin: 20px;
-      display: grid;
-      align-items: center;
-      justify-content: center;
-      grid-template-columns: 600px;
-      gap: 20px;
-
-      .left {
-        width: 600px;
-        h1 {
-          text-align: center;
-          font-size: 30px;
-          margin-bottom: 10px;
-        }
-        .btns {
-          align-items: left;
-          justify-content: center;
-          display: grid;
-          grid-template-columns: 200px 200px;
-          gap: 10px;
-          h3 {
-            border-radius: 10px;
-            color: white;
-            background-color: navy;
-            padding: 15px;
-            text-align: center;
-            background-color: rgb(32, 0, 51);
-            &:hover {
-              cursor: pointer;
-              background-color: rgb(63, 1, 99);
-            }
-          }
-        }
-      }
-
-      .right {
-        width: 600px;
-        h1 {
-          text-align: center;
-          font-size: 30px;
-          margin-bottom: 10px;
-        }
-        .btns {
-          align-items: center;
-          justify-content: center;
-          display: grid;
-          grid-template-columns: 280px 280px;
-          gap: 10px;
-          h3 {
-            border-radius: 10px;
-            font-size: 15px;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            background-color: rgb(32, 0, 51);
-            &:hover {
-              cursor: pointer;
-              background-color: rgb(63, 1, 99);
-            }
-          }
-        }
-      }
-    }
-    
-  }
-
-  table {
-    background-color: whitesmoke;
-     tr, td{
-      &:hover {
-        background-color: rgb(207, 207, 207);
-      }
-    }
-    th {
-      text-align: center;
-      padding: 15px;
-     
-    }
-    td {
-      padding: 20px;
-     
-    }
-  }
-
-  #shortermTbl, #diplomaTbl {
-    background-color: whitesmoke;
-     tr, td{
-      &:hover {
-        background-color: rgb(207, 207, 207);
-      }
-    }
-    th {
-      text-align: center;
-      padding: 15px;
-     
-    }
-    td {
-      padding: 20px;
-     width: 100%;
-    }
-  }
-  
-  #feedBackForm {
-    padding: 50px 30px;
-    border-radius: 10px;
-    border: none;
-
-    form {
-      display: grid;
-      gap: 10px;
-      grid-template-columns: auto auto auto;
-
-      h2 {
-        grid-column: 1 / span 2;
-      }
-
-      .closeBtn {
-        display: flex;
-        justify-content: right;
-        align-items: center;
-
-        button {
-          padding: 10px;
-          border: none;
-          border-radius: 5px;
-        }
-      }
-
-      input {
-        text-transform: uppercase;
         width: 200px;
-        padding: 10px;
-        border-radius: 5px;
-      }
-
-      .satisfaction {
-        flex-direction: column;
-        display: flex;
-
-        select {
-          padding: 10px;
-          border-radius: 5px;
-        }
-      }
-
-      .feedBackbox {
-        flex-direction: column;
-        display: flex;
-        width: auto;
-        grid-column: 1 / span 3;
-
-        textarea {
-          background-color: rgb(234, 234, 234);
-          height: 100px;
-          resize: none;
-          padding: 10px;
-          border-radius: 5px;
-        }
-      }
-
-      .agreePolicy {
-        display: flex;
-        justify-self: center;
-        grid-column: 1 / span 3;
-
-        p {
-          width: 700px;
-          text-align: center;
-        }
-      }
-
-      .submitBtn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        grid-column: 1 / span 3;
-
-        button {
-          color: white;
-          background-color: rgb(54, 54, 255);
-          border-radius: 5px;
-          border: none;
-          padding: 10px 100px;
-        }
-      }
-    }
-  }
-
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 80vh;
-    .button-area {
-      display: grid;
-      grid-template-columns: auto auto auto;
-      gap: 15px;
-      a {
-        text-decoration: none;
-      }
-
-      .timeClock {
-        grid-column: 1 / span 2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 15px;
-        color: white;
         background-color: navy;
-        box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
-
-        h1 {
-          font-size: 70px;
-        }
-      }
-
-      .btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 200px;
-        height: 200px;
-        border-radius: 15px;
-        color: navy;
-        background-color: rgb(255, 255, 255);
-        box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
+        border: none;
+        color: white;
+        border-radius: 5px;
         transition: 0.5s;
 
         &:hover {
           cursor: pointer;
-          scale: 0.95;
+          scale: 1.01;
         }
 
-        img {
-          height: 60px;
-          margin-bottom: 15px;
-        }
-
-        p {
-          font-size: 18px;
+        a {
+          text-decoration: none;
+          color: white;
         }
       }
-    }
-
-
-#pdfViewer{
-  padding: 10px;
-  border: none;
-  height: 1000px;
-  width: 1900px;
-  embed{
-    height: 95%;
-    width: 100%;
-  }
-  .closebtn{
-    display: flex;
-    width: 100%;
-    button{
-      border-radius: 10px;
-      width: 200px;
-      margin: auto;
-      padding: 10px;
-      color: white;
-      background-color: navy;
     }
   }
 }
 
-
-    .roteteShape {
-      height: 100px;
+#diploma,
+#shortCate,
+#cbtModal,
+#shorterModal,
+#cbtprogramModal {
+  border: none;
+  border-radius: 10px;
+  width: 900px;
+  padding: 20px;
+  .tblheader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+      padding: 5px;
       width: 100px;
+    }
+  }
+
+  .stcards {
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 400px 400px;
+    h2 {
+      color: white;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.111);
+      padding: 20px;
+      border-radius: 10px;
+      background-color: rgb(32, 0, 51);
+      &:hover {
+        cursor: pointer;
+        background-color: rgb(63, 1, 99);
+      }
+    }
+  }
+  .courseCard {
+    margin: 20px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 600px;
+    gap: 20px;
+
+    .left {
+      width: 600px;
+      h1 {
+        text-align: center;
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+      .btns {
+        align-items: left;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 280px 280px;
+        gap: 10px;
+        h3 {
+          border-radius: 10px;
+          color: white;
+          background-color: navy;
+          padding: 15px;
+          text-align: center;
+          background-color: rgb(32, 0, 51);
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(63, 1, 99);
+          }
+        }
+      }
+    }
+
+    .right {
+      width: 600px;
+      h1 {
+        text-align: center;
+        font-size: 30px;
+        margin-bottom: 10px;
+      }
+      .btns {
+        align-items: center;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 280px 280px;
+        gap: 10px;
+        h3 {
+          border-radius: 10px;
+          font-size: 15px;
+          color: white;
+          padding: 20px;
+          text-align: center;
+          background-color: rgb(32, 0, 51);
+          &:hover {
+            cursor: pointer;
+            background-color: rgb(63, 1, 99);
+          }
+        }
+      }
+    }
+  }
+}
+
+table {
+  background-color: whitesmoke;
+  tr,
+  td {
+    &:hover {
+      background-color: rgb(207, 207, 207);
+    }
+  }
+  th {
+    text-align: center;
+    padding: 15px;
+  }
+  td {
+    padding: 20px;
+  }
+}
+
+#shortermTbl,
+#diplomaTbl {
+  background-color: whitesmoke;
+  tr,
+  td {
+    &:hover {
+      background-color: rgb(207, 207, 207);
+    }
+  }
+  th {
+    text-align: center;
+    padding: 15px;
+  }
+  td {
+    padding: 20px;
+    width: 100%;
+  }
+}
+
+#feedBackForm {
+  padding: 50px 30px;
+  border-radius: 10px;
+  border: none;
+
+  form {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: auto auto auto;
+
+    h2 {
+      grid-column: 1 / span 2;
+    }
+
+    .closeBtn {
       display: flex;
+      justify-content: right;
       align-items: center;
-      justify-content: center;
-      z-index: -1;
-      position: absolute;
-      
-      img {
-        z-index: -1;
-        position: absolute;
-        height: 650px;
-        animation: spin 5s linear infinite;
+
+      button {
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
       }
     }
-    @keyframes spin {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
+
+    input {
+      text-transform: uppercase;
+      width: 200px;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
+    .satisfaction {
+      flex-direction: column;
+      display: flex;
+
+      select {
+        padding: 10px;
+        border-radius: 5px;
       }
     }
-    
 
+    .feedBackbox {
+      flex-direction: column;
+      display: flex;
+      width: auto;
+      grid-column: 1 / span 3;
 
-    .leftContainer {
+      textarea {
+        background-color: rgb(234, 234, 234);
+        height: 100px;
+        resize: none;
+        padding: 10px;
+        border-radius: 5px;
+      }
+    }
+
+    .agreePolicy {
+      display: flex;
+      justify-self: center;
+      grid-column: 1 / span 3;
+
+      p {
+        width: 700px;
+        text-align: center;
+      }
+    }
+
+    .submitBtn {
       display: flex;
       justify-content: center;
-      align-items: left;
+      align-items: center;
+      grid-column: 1 / span 3;
+
+      button {
+        color: white;
+        background-color: rgb(54, 54, 255);
+        border-radius: 5px;
+        border: none;
+        padding: 10px 100px;
+      }
+    }
+  }
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  .button-area {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 15px;
+    a {
+      text-decoration: none;
+    }
+
+    .timeClock {
+      grid-column: 1 / span 2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       flex-direction: column;
-      gap: 20px;
+      border-radius: 15px;
+      color: white;
+      background-color: navy;
+      box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
 
       h1 {
-        margin: 0;
-        font-weight: 900;
         font-size: 70px;
-        color: navy;
-        width: 700px;
-        line-height: 80px;
+      }
+    }
+
+    .btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 200px;
+      height: 200px;
+      border-radius: 15px;
+      color: navy;
+      background-color: rgb(255, 255, 255);
+      box-shadow: 3px 2px 10px rgba(0, 0, 0, 0.296);
+      transition: 0.5s;
+
+      &:hover {
+        cursor: pointer;
+        scale: 0.95;
+      }
+
+      img {
+        height: 60px;
+        margin-bottom: 15px;
       }
 
       p {
-        margin-top: -15px;
-        width: 500px;
+        font-size: 18px;
       }
     }
-    
   }
 
-  .translator{
-    display: flex;
-    position: fixed;
-    margin: 10px 20px;
-    bottom: 0;
-    right: 0;
+  #pdfViewer {
+    padding: 10px;
+    border: none;
+    height: 1000px;
+    width: 1900px;
+    embed {
+      height: 95%;
+      width: 100%;
+    }
+    .closebtn {
+      display: flex;
+      width: 100%;
+      button {
+        border-radius: 10px;
+        width: 200px;
+        margin: auto;
+        padding: 10px;
+        color: white;
+        background-color: navy;
+      }
+    }
   }
+
+  .roteteShape {
+    height: 100px;
+    width: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
+    position: absolute;
+
+    img {
+      z-index: -1;
+      position: absolute;
+      height: 650px;
+      animation: spin 5s linear infinite;
+    }
+  }
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .leftContainer {
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+    gap: 20px;
+
+    h1 {
+      margin: 0;
+      font-weight: 900;
+      font-size: 70px;
+      color: navy;
+      width: 700px;
+      line-height: 80px;
+    }
+
+    p {
+      margin-top: -15px;
+      width: 500px;
+    }
+  }
+}
+
+.translator {
+  display: flex;
+  position: fixed;
+  margin: 10px 20px;
+  bottom: 0;
+  right: 0;
+}
